# PSDevBot-rust

./: .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  shell.nix
src/: config.rs  github_api.rs  main.rs  unbounded.rs  webhook.rs
src/webhook/: mod.rs  schema.rs
templates/: author.html  commit.html  pull_request.html  pull_request_event.html  push_event.html  repository.html  simple_commit.html  username.html
