[package]
name = "psdevbot-rust"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2018"

[dependencies]
askama = "0.10.3"
dashmap = "3.11.10"
env_logger = "0.8.1"
htmlescape = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.11"
lru = { version = "0.6.0", default-features = false }
regex = { version = "1.4.1", default-features = false }
reqwest = { version = "0.10.6", features = [ "json" ] }
serde = { version = "1.0.117", features = ["derive"] }
showdown = "0.8.0"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded", "time"] }
warp = "0.2.5"
warp_github_webhook = "0.3.0"
