[package]
name = "psdevbot-rust"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2018"

[dependencies]
askama = "0.10.3"
bytes = "0.5.4"
dashmap = "3.11.10"
dotenv = "0.15.0"
env_logger = "0.8.1"
futures = { version = "0.3.7", default-features = false, features = [ "std" ] }
hashbrown = "0.9.1"
hex = "0.4.0"
hmac = "0.10.1"
htmlescape = "0.3.1"
log = "0.4.11"
lru = { version = "0.6.0", default-features = false }
once_cell = "1.4.1"
regex = { version = "1.4.1", default-features = false }
reqwest = { version = "0.10.6", features = [ "gzip", "json" ] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sha2 = "0.9.2"
showdown = "0.10.0"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded", "time"] }
unicase = "2.6.0"
warp = { version = "0.2.5", default-features = false }
