[package]
name = "psdevbot"
version = "0.6.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bot used to report GitHub changes in Pokémon Showdown chatrooms"
repository = "https://gitlab.com/KonradBorowski/psdevbot-rust/"

[dependencies]
askama = { version = "0.11.0", default-features = false }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = { version = "0.3.7", default-features = false, features = [ "std" ] }
hashbrown = "0.11.2"
hex = "0.4.0"
hmac = "0.12.0"
htmlescape = "0.3.1"
log = "0.4.11"
lru = { version = "0.7.2", default-features = false }
once_cell = "1.4.1"
regex = { version = "1.5.4", default-features = false }
reqwest = { version = "0.11.0", default-features = false, features = [ "gzip", "json", "rustls-tls-webpki-roots" ] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sha2 = "0.10.1"
showdown = { version = "0.21.0", default-features = false, features = [ "rustls-tls-webpki-roots" ] }
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.2"
unicase = "2.6.0"
warp = { version = "0.3.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.0.2", features = ["test-util"] }

[badges.maintenance]
status = "deprecated"
